manifests/routes/homepage-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/instance: homepage
spec:
  parentRefs:
    - name: web
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 80
